--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Better Online Safety Manifesto</title>
+    <title>Better Online Safety Proposal</title>
     <meta name="description" content="A proposal for a safer internet, without compromising your privacy." />
     <meta name="color-scheme" content="light dark" />
     
